# UltraRAG

./: .dockerignore  .env.dev  .gitignore  Dockerfile  Dockerfile.base-cpu  Dockerfile.base-gpu  README.md  docs.json  environment.yml  index.html  index_en.html  pyproject.toml  requirements.txt  setup.py
.github/: SECURITY.md  dependabot.yml
.github/workflows/: dockerhub-nightly.yml
.streamlit/: config.toml
blog/cn/: 00-Installing and Running RAG.md  00-从安装到跑通rag.md  01_build_light_deepresearch.md  ultrarag3_0.md
blog/en/: 00-Installing and Running RAG.md  00_Installing_and_Running_RAG.md  01_build_light_deepresearch.md  ultrarag3_0.md
config/: ds_stage0.json  ds_stage1.json  models_download_list.yaml
config/pipeline/: finetune.yaml
data/: chunk_example.jsonl  corpus_example.jsonl  qrels.txt  run_a.txt  run_b.txt  sample_nq_10.jsonl
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README-Chinese.md  README-English.md  README_zh.md  SECURITY.md  llms.txt  simple_guide.md  todo.md
examples/: AgentCPM-Report.yaml  DeepResearch.yaml  LLM_memory.yaml  RAG.yaml  README.md  build_image_corpus.yaml  build_mineru_corpus.yaml  build_text_corpus.yaml  corpus_chunk.yaml  deep_research_citation.yaml  evisrag.yaml  hybrid_search.yaml  light_deepresearch.yaml  light_research_citation.yaml  load_data.yaml  milvus_index.yaml  mineru_corpus.yaml  multimodal_rag.yaml  multiturn_chat.yaml  pageindex_index.yaml  pageindex_qa.yaml  paper_research.yaml  rag.yaml  rag_branch.yaml  rag_citation.yaml  rag_full.yaml  rag_loop.yaml  rankcot.yaml  search_o1.yaml  surveycpm.yaml  test_gen.yaml  test_rerank.yaml  test_retriever.yaml  vanilla_llm.yaml  vanilla_vlm.yaml  visrag.yaml  web_search.yaml  webnote.yaml  webnote_websearch.yaml
prompt/: qa_memory.jinja  qa_simple.jinja  surveycpm_write.jinja
rag-paper-daily/: README.md  _config.yml  rag-paper-daily.html
script/: case_study.py  deploy_retriever_config.json  deploy_retriever_server.py  save_retrieve_results.py  vllm_serve_emb.sh  vllm_serve_vlm.sh
scripts/: batch_request.py  build_index.py  download_model.py  dpo_train.sh  finetune-bgem3.sh  run_generate_data.sh  run_server.sh  run_vllm.sh
src/ultrarag/: api.py  (+3 more)
test/: test_elasticsearch.py
(+349 files in other folders)
